--- a/Scannect/wwwroot/css/site.css
+++ b/Scannect/wwwroot/css/site.css
@@ -56,11 +56,18 @@ button.accept-policy {
 html {
   position: relative;
   min-height: 100%;
+    background-color: rgba(250, 250, 250, 1);
 }
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .footer {
   position: absolute;
@@ -68,4 +75,85 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+.search {
+    width: 100vw;
+    text-align: center;
+    height: 200px;
+    transform: translateY(-200px);
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+}
+.search-box {
+    display: flex;
+    flex-direction: row;
+    max-width: 600px;
+    margin: 0 auto;
+    border: 1px solid rgba(20, 20, 20, 1);
+    border-radius: 20px;
+    height: 40px;
+    padding: 0;
+}
+.search-box i.fa {
+    width: 50px;
+    height: 40px;
+    padding: 10px;
+    padding-left: 13px;
+    border-right: 1px solid rgba(10, 10, 10, 1);
+}
+.search-box form {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+}
+.search-box form input.search-bar {
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    height: 100%;
+    border-radius: 20px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+.search-box form input.btn, a.feeling-it {
+    position: absolute;
+    width: 100px;
+    left: 50%;
+    transform: translateX(-120px) translateY(70px);
+    border: none;
+    background-color: rgba(240, 240, 240, 1);
+    color: white;
+}
+a.feeling-it {
+    transform: translateX(10px) translateY(70px);
+}
+.search-feed {
+    top: 50px;
+    transform: none;
+    display: flex;
+    padding: 20px;
+    left: 0;
+    flex-direction: row;
+    height: 120px;
+}
+.search-box-feed {
+    width: 100%;
+    margin-top: 18px;
+    transform: translateX(-50px);
+}
+
+.search-box-feed form input.btn {
+    position: relative;
+    transform: translateY(-35px) translateX(60px);
+}
+.card-body.search-body {
+    display: flex;
+    flex-direction: column;
+}
+.card {
+    margin-bottom: 10px;
 }
