--- a/Scannect/Views/Shared/_Layout.cshtml
+++ b/Scannect/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Scannect - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container-fluid">
+            &copy; 2021 - Scannect - a website by Thomas Fahey - Check out our <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
