--- a/Scannect/wwwroot/css/site.css
+++ b/Scannect/wwwroot/css/site.css
@@ -68,13 +68,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    overflow: hidden;
 }
 
 
@@ -146,6 +140,26 @@ a.feeling-it {
     transform: translateX(-50px);
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
 .search-box-feed form input.btn {
     position: relative;
     transform: translateY(-35px) translateX(60px);
@@ -156,4 +170,14 @@ a.feeling-it {
 }
 .card {
     margin-bottom: 10px;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    z-index: 100;
+    height: 28px;
+
 }
